Bug fix: color background same as type of brick in case of gaps due to sizing.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+body{
+  background-color:rgb(234, 234, 255);
+}
+
 #brickWall{
   display:grid;
   width:100%;
